--- a/source/less/blocks/header-logo.less
+++ b/source/less/blocks/header-logo.less
@@ -20,7 +20,7 @@
 
 .header-logo__image {
   display: block;
-  width: 74px;
+  width: 100%;
   height: 24px;
   fill: currentColor;
   pointer-events: none;
