--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -96,17 +96,21 @@
 }
 
 .page-header__title {
-  margin-top: 16px;
-  margin-bottom: 16px;
+  margin-top: 15px;
+  margin-bottom: 5px;
   font-size: 24px;
   font-weight: 300;
-  line-height: 28px;
+  line-height: 31px;
   text-align: center;
 
   @media @tablet {
     margin-top: 34px;
-    margin-bottom: 34px;
+    margin-bottom: auto;
     font-size: 50px;
-    line-height: 60px;
+    line-height: 66px;
+  }
+
+  @media @desktop {
+    margin-top: 32px;
   }
 }
