--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -23,15 +23,15 @@
   @media @tablet {
     margin-bottom: 0;
     font-size: 40px;
-    line-height: 48px;
+    line-height: 53px;
   }
 
   @media @desktop {
     font-size: 50px;
-    line-height: 60px;
+    line-height: 66px;
   }
 
   &:last-of-type {
-    margin-bottom: 0;
+    margin-bottom: -14px;
   }
 }
