--- a/source/less/style.less
+++ b/source/less/style.less
@@ -30,5 +30,5 @@
 @import "blocks/table-price.less";
 @import "blocks/photo.less";
 @import "blocks/form-photo.less";
-@import "blocks/modal-form.less";
+@import "blocks/popup.less";
 @import "blocks/efficiency.less";
