--- a/source/less/blocks/form-feedback.less
+++ b/source/less/blocks/form-feedback.less
@@ -4,7 +4,7 @@
   @media @tablet {
     display: flex;
     flex-direction: column;
-    padding: 0 20px;
+    padding: 0 30px;
   }
 
   @media @desktop {
@@ -116,7 +116,7 @@
 .form-feedback__fieldset {
   position: relative;
   margin: 0;
-  padding: 0 20px;
+  padding: 0 24px;
   border: none;
 
   @media @tablet {
@@ -136,7 +136,7 @@
     padding-bottom: 38px;
 
     @media @tablet {
-      padding: 52px 58px 49px;
+      padding: 56px 48px 49px;
     }
 
     @media @desktop {
@@ -159,7 +159,7 @@
     padding-bottom: 34px;
 
     @media @tablet {
-      padding: 52px 58px 55px;
+      padding: 52px 50px 55px;
     }
 
     @media @desktop {
@@ -192,8 +192,8 @@
   @media @tablet {
     position: absolute;
     z-index: 5;
-    left: 0;
-    top: 0;
+    left: 1px;
+    top: 0px;
     transform: translateY(-50%);
     padding: 0;
   }
@@ -266,6 +266,7 @@
       align-items: flex-start;
       position: relative;
       margin-bottom: 29px;
+      margin-right: -10px;
 
       &::after {
         content: "";
@@ -302,12 +303,20 @@
     width: 260px;
 
     &:nth-child(2),
-    &:nth-child(4),
     &:nth-child(6) {
       order: 2;
     }
 
-    &:nth-child(3),
+    &:nth-child(4) {
+      order: 2;
+      margin-right: -20px;
+    }
+
+    &:nth-child(3) {
+      order: 1;
+      margin-right: -20px;
+    }
+
     &:nth-child(5) {
       order: 1;
     }
@@ -368,23 +377,29 @@
 
 .form-feedback__label {
   display: block;
-  margin-left: 22px;
+  margin-left: 20px;
   margin-bottom: 5px;
   line-height: 30px;
   color: @pink;
   text-transform: uppercase;
 
   @media @tablet {
-    margin-left: 0;
+    margin-left: -12px;
     margin-bottom: 0;
-    margin-right: 18px;
+    margin-right: 20px;
+  }
+
+  @media @desktop {
+    margin-left: 1px;
+    margin-bottom: 0;
+    margin-right: 16px;
   }
 
   &--contacts {
     @media @tablet {
       order: 1;
-      margin-top: 10px;
-      margin-left: 19px;
+      margin-top: 8px;
+      margin-left: 10px;
     }
   }
 }
@@ -408,6 +423,10 @@
   &:focus {
     outline: 0;
     border-color: @pink;
+  }
+
+  @media @tablet {
+    padding: 14px 20px 16px;
   }
 }
 
@@ -473,11 +492,10 @@
   }
 }
 
-.form-feedback__label-checkbox,
-.form-feedback__label-radio {
+.form-feedback__label-checkbox {
   position: relative;
   display: block;
-  padding-left: 69px;
+  padding-left: 56px;
   padding-top: 5px;
   padding-bottom: 4px;
   font-size: 18px;
@@ -486,6 +504,30 @@
 
   @media @tablet {
     padding-left: 59px;
+  }
+
+  &:hover::before {
+    border-color: @bg-color-header;
+  }
+
+  &:active::before {
+    border-color: @pink;
+  }
+}
+
+.form-feedback__label-radio {
+  position: relative;
+  display: block;
+  padding-left: 70px;
+  padding-top: 5px;
+  padding-bottom: 4px;
+  font-size: 18px;
+  line-height: 30px;
+  cursor: pointer;
+
+  @media @tablet {
+    padding-left: 58px;
+    padding-top: 4px;
   }
 
   &:hover::before {
@@ -542,7 +584,7 @@
 
 .form-feedback__textarea {
   margin-top: 16px;
-  padding: 14px 19px;
+  padding: 14px 15px;
   min-height: 200px;
   -ms-overflow-style: -ms-autohiding-scrollbar;
   resize: vertical;
@@ -550,6 +592,7 @@
   @media @tablet {
     margin-top: 0;
     min-height: 193px;
+    padding: 14px 10px;
   }
 
   @media @desktop {
