--- a/source/less/blocks/form-photo.less
+++ b/source/less/blocks/form-photo.less
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
-  padding-top: 20px;
+  padding-top: 25px;
   padding-bottom: 29px;
   background-color: @silver;
 
@@ -15,7 +15,8 @@
   }
 
   @media @desktop {
-    padding: 41px 60px 57px 80px;
+    padding: 41px 61px 57px 80px;
+    padding-top: 40px;
   }
 }
 
@@ -75,13 +76,13 @@
   }
 
   @media @desktop {
-    margin-right: 0;
+    margin-right: 11px;
     width: 410px;
   }
 }
 
 .form-photo__filters {
-  padding: 42px 20px 38px;
+  padding: 35px 20px 38px;
 
   @media @tablet {
     margin-bottom: 66px;
