--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -118,7 +118,7 @@
     }
 
     @media @desktop {
-      padding: 24px 32px 12px 27px;
+      padding: 24px 30px 12px 27px;
       width: 940px;
     }
   }
@@ -144,7 +144,7 @@
 }
 
 .photo__text {
-  margin-top: 0;
+  margin-top: -1px;
   margin-bottom: 9px;
 
   @media @tablet {
@@ -156,6 +156,10 @@
     @media @tablet {
       order: 2;
       min-height: auto;
+    }
+
+    @media @desktop {
+      margin-top: 0;
     }
   }
 }
@@ -197,5 +201,15 @@
   @media @tablet {
     margin-left: 0;
     margin-right: 17px;
+  }
+}
+
+.photo__br {
+  @media @tablet {
+    display: none;
+  }
+
+  @media @desktop {
+    display: none;
   }
 }
